[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.1"
tokio = { version = "1", features = ["full"] }
libloading = "0.8.1"
git2 = "0.18.1"